--- a/programTest/DateRange.UnitTests.csproj
+++ b/programTest/DateRange.UnitTests.csproj
@@ -49,16 +49,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ProgramTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\program\program.csproj">
+    <ProjectReference Include="..\program\DateRange.csproj">
       <Project>{1f048844-5d1d-49e2-af39-a50240aef092}</Project>
-      <Name>program</Name>
+      <Name>DateRange</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
